--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,5 +1,6 @@
 {
-  "almanam": "Almanam",
+  "almanam": "Listaat",
+  "listaat": "Listaat",
   "search": "Search",
   "yes": "Yes",
   "no": "No",
@@ -341,14 +342,17 @@
   "project_fields_edit" : "Edit Project Fields",
   "is_cost_calculated" : "Is Cost Calculated",
   "folders" : "Folders",
+  "folder" : "Folder",
   "folders_create" : "Create Folder",
   "folders_edit" : "Edit Folder",
   "parent_folder" : "Parent Folder",
   "project_folders" : "Project Folders",
   "project_folders_create" : "Add Project Folder",
+  "collections" : "Collections",
   "parent_Collection" : "Parent Collection",
   "collection_create" : "Create Collection",
   "collection_edit" : "Edit Collection",
+  "items" : "Items",
   "item_create" : "Item Create",
   "item_edit" : "Edit Item",
   "quick_list" : "Quick List",
@@ -360,5 +364,20 @@
   "item_groups_edit" : "Edit Item Groups",
   "item_group_project" : "Item Group Project",
   "item_group_project_create" : "Create Item Group Project",
-  "item_group_project_edit" : "Edit Item Group Project"
+  "item_group_project_edit" : "Edit Item Group Project",
+  "project_shares" : "Project Shares",
+  "project_shares_create" : "Share Project",
+  "is_sent" : "Is Send",
+  "is_a_copy" : "Is Copy",
+  "is_accepted" : "Is Accepted",
+  "sender_user" : "Sender User",
+  "receiver_user" : "Receiver User",
+  "project_folder" : "Project Folder",
+  "project_folders_Edit" : "Edit Project Folder",
+  "unit" : "Unit",
+  "upload_image" : "Upload Image",
+  "upload_receipt" : "Upload Receipt",
+  "source_name" : "Source Name",
+  "source_address" : "Source Address",
+  "source_website" : "Source Website"
 }
