--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -381,7 +381,8 @@
   "source_address" : "Source Address",
   "source_website" : "Source Website",
   "line_total" : "Line Total",
-  "upload_files" : "Upload Files"
+  "upload_files" : "Upload Files",
+  "view_file" : "View File"
 
 
 }
