project-tabs-project-types-lang

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -417,6 +417,8 @@
   "next_ar": "التالي باللغة العربية",
   "alt": "البديل",
   "alt_en": "البديل باللغة الإنجليزية",
-  "alt_ar": "البديل باللغة العربية"
+  "alt_ar": "البديل باللغة العربية",
+  "filter_name_en" : "اسم الفلتر بالانجليزية",
+  "filter_name_ar" : "اسم الفلتر بالعربية"
 }
 
