fix collections edit and project shares and make user phone optional

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -316,7 +316,7 @@
   "select_dreams_count": "اختر عدد الأحلام",
 
 
-  
+
   "projects" : "المشاريع",
   "project" : "المشروع",
   "project_types" : "انواع المشاريع",
@@ -419,6 +419,10 @@
   "alt_en": "البديل باللغة الإنجليزية",
   "alt_ar": "البديل باللغة العربية",
   "filter_name_en" : "اسم الفلتر بالانجليزية",
-  "filter_name_ar" : "اسم الفلتر بالعربية"
+  "filter_name_ar" : "اسم الفلتر بالعربية",
+  "admin": "أدمن",
+  "owner": "مالك",
+  "viewer": "مشاهد",
+  "choose_user": "اختر مستخدم"
 }
 
